hphp/test/zend/good/ext/simplexml/tests/bug51615.php.skipif
<?php if (!extension_loaded("simplexml")) print "skip"; 
 if (!extension_loaded("dom")) print "skip";
?>