hphp/test/zend/bad/ext/simplexml/tests/bug37565.php.skipif
<?php if (!extension_loaded("simplexml") || !extension_loaded('reflection')) print "skip"; ?>